src/TestSuite/TestAny.ATG
$01246
/*-------------------------------------------------------------------------
Test of ANY symbols
----------------------------------------------------------------------------*/
COMPILER Test

TOKENS
  a = "a".
  b = "b".
  c = "c".
  d = "d".
  e = "e".
  f = "f".
  g = "g".
  h = "h".
  i = "i".

PRODUCTIONS

Test = A B C D.
A = {a | ANY | b} c.
B = {ANY d} e.
C = [ANY f] g.
D = {ANY} h | i.

END Test.
